--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,7 @@ hr {
     margin-bottom: 20px;
     text-align: center;
     color: #FFF;
+    text-shadow: 1.5px 1.5px 2.5px #000; /* Thin black halo */
     font-family: 'Roboto Slab', serif;
 }
 
@@ -102,7 +103,7 @@ hr {
     background-size: cover;
     background-position: center top; /* Shift image upwards */
     background-position: center 55%; /* Shift 10% down from the top */
-    filter: blur(0.5px);
+    filter: blur(0px);
     opacity: 1;
     z-index: 1;
 }
@@ -119,6 +120,7 @@ hr {
     font-weight: 700;
     margin-bottom: 10px;
     color: #FFF;
+    text-shadow: 1.5px 1.5px 2.5px #000; /* Thin black halo */
 }
 
 .jumbotron p {
